[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ct-brain-mask"
version = "0.3.3"
description = "HU-threshold-based brain segmentation for CT and dynamic CT imaging"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Alexander Hermann" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["ct", "brain", "mask", "segmentation", "dynamic-ct", "perfusion", "hounsfield", "medical-imaging"]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
examples = [
    "matplotlib",
    "pydicom",
    "nibabel",
]
test = [
    "pytest",
    "pydicom",
]

[project.urls]
Homepage = "https://github.com/alhermann/ct-brain-mask"
Repository = "https://github.com/alhermann/ct-brain-mask"
Issues = "https://github.com/alhermann/ct-brain-mask/issues"
